--- a/src/Fleck/Fleck.csproj
+++ b/src/Fleck/Fleck.csproj
@@ -56,9 +56,6 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\CommonAssemblyInfo.cs">
-      <Link>Properties\CommonAssemblyInfo.cs</Link>
-    </Compile>
     <Compile Include="Handlers\ComposableHandler.cs" />
     <Compile Include="Handlers\Draft76Handler.cs" />
     <Compile Include="Handlers\Hybi13Handler.cs" />
@@ -67,6 +64,7 @@
     <Compile Include="FleckLog.cs" />
     <Compile Include="Interfaces\IWebSocketServer.cs" />
     <Compile Include="Interfaces\IWebSocketConnectionInfo.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SocketWrapper.cs" />
     <Compile Include="WebSocketConnectionInfo.cs" />
     <Compile Include="WebSocketServer.cs" />
