--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\src\Fleck.Tests\packages.config" />
   <repository path="..\Fleck.Tests\packages.config" />
+  <repository path="..\Fleck.Wamp.Tests\packages.config" />
+  <repository path="..\Fleck.Wamp\packages.config" />
 </repositories>
