--- a/src/Fleck.Wamp/Fleck.Wamp.csproj
+++ b/src/Fleck.Wamp/Fleck.Wamp.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IWampSubProtocolHandler.cs" />
     <Compile Include="WampSubProtocolHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
