--- a/src/Fleck/project.json
+++ b/src/Fleck/project.json
@@ -2,8 +2,19 @@
   "title": "Fleck",
   "version": "1.0.0-*",
   "frameworks": {
+    "net40": {
+      "buildOptions": {
+        "define": [
+          "NET40"
+        ]
+      }
+    },
     "netstandard1.3": {
-      "buildOptions": { "define": [ "NETCORE" ] },
+      "buildOptions": {
+        "define": [
+          "NETCORE"
+        ]
+      },
       "dependencies": {
         "System.Runtime": "4.1.0",
         "System.Linq": "4.1.0",
@@ -12,7 +23,7 @@
         "System.Text.RegularExpressions": "4.1.0",
         "System.IO": "4.1.0",
         "System.Text.Encoding.Extensions": "4.0.11",
-        "System.Runtime.Extensions" : "4.1.0",
+        "System.Runtime.Extensions": "4.1.0",
         "System.Security.Cryptography.Algorithms": "4.2.0",
         "System.Security.Cryptography.X509Certificates": "4.1.0",
         "System.Net.Security": "4.0.0",
