Fixing NET40 compilation

--- a/src/Fleck/project.json
+++ b/src/Fleck/project.json
@@ -2,6 +2,13 @@
   "title": "Fleck",
   "version": "1.0.0-*",
   "frameworks": {
+    "net40": {
+      "buildOptions": {
+        "define": [
+          "NET40"
+        ]
+      }
+    },
     "netstandard1.3": {
       "buildOptions": {
         "define": [
