Added WebSocketRelay class which makes is easier to manage WebSocketConnection Lists, enables message broadcasts including or excluding the Sender from the Broadcast List.

--- a/src/Fleck.Tests/Fleck.Tests.csproj
+++ b/src/Fleck.Tests/Fleck.Tests.csproj
@@ -65,6 +65,7 @@
     <Compile Include="QueuedStreamTests.cs" />
     <Compile Include="WebSocketConnectionInfoTests.cs" />
     <Compile Include="WebSocketConnectionTests.cs" />
+    <Compile Include="WebSocketRelayTests.cs" />
     <Compile Include="WebSocketServerTests.cs" />
     <Compile Include="RequestParserTests.cs" />
     <Compile Include="Hybi14DataFrameTests.cs" />
