--- a/src/Fleck.Tests/Fleck.Tests.csproj
+++ b/src/Fleck.Tests/Fleck.Tests.csproj
@@ -3,8 +3,9 @@
     <TargetFrameworks>net45;netcoreapp2.0</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.6.2" />
     <PackageReference Include="Moq" Version="4.8.2" />
-    <PackageReference Include="nunit" Version="2.5.10.11092" />
+    <PackageReference Include="nunit" Version="3.10.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Fleck\Fleck.csproj" />
