--- a/src/Fleck/Fleck.csproj
+++ b/src/Fleck/Fleck.csproj
@@ -2,8 +2,9 @@
   <PropertyGroup>
     <Title>Fleck</Title>
     <Authors>statenjason</Authors>
-    <Copyright>Copyright 2018</Copyright>
-    <PackageLicenseUrl>http://www.opensource.org/licenses/mit-license.php</PackageLicenseUrl>
+    <Copyright>Copyright Jason Staten 2010-2018. All rights reserved.</Copyright>
+    <Description>C# WebSocket Implementation</Description>
+    <PackageLicenseUrl>https://github.com/statianzo/Fleck/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/statianzo/Fleck</PackageProjectUrl>
     <RepositoryUrl>https://github.com/statianzo/Fleck</RepositoryUrl>
     <PackageTags>websockets server html5 events</PackageTags>
