Added version property for ci.

--- a/src/Fleck/Fleck.csproj
+++ b/src/Fleck/Fleck.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Title>Fleck</Title>
+    <Version>0.0.0.1-local</Version>
     <Authors>statenjason</Authors>
     <Copyright>Copyright Jason Staten 2010-2018. All rights reserved.</Copyright>
     <Description>C# WebSocket Implementation</Description>
