--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,12 @@
-version: 1.0.{build}
+version: 0.0.{build}-ci
 image: Visual Studio 2017
 configuration: Release
+init:
+- pwsh: >-
+    if ($env:appveyor_repo_tag -eq 'true') {
+        $tag = $env:appveyor_repo_tag_name
+        Update-AppveyorBuild -Version "$tag"
+    }
 dotnet_csproj:
   patch: true
   file: src\Fleck\Fleck.csproj
