--- a/src/Fleck/Fleck.csproj
+++ b/src/Fleck/Fleck.csproj
@@ -1,14 +1,68 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<?xml version="1.0" encoding="utf-8"?>
+<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <Title>Fleck</Title>
-    <Version>0.0.0.1-local</Version>
-    <Authors>statenjason</Authors>
-    <Copyright>Copyright Jason Staten 2010-2018. All rights reserved.</Copyright>
-    <Description>C# WebSocket Implementation</Description>
-    <PackageLicenseUrl>https://github.com/statianzo/Fleck/blob/master/LICENSE</PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/statianzo/Fleck</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/statianzo/Fleck</RepositoryUrl>
-    <PackageTags>websockets server html5 events</PackageTags>
-    <TargetFrameworks>net45;netstandard2.0;netcoreapp2.0</TargetFrameworks>
+    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <ProductVersion>8.0.30703</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
+    <ProjectGuid>{8FF04EF9-FE3C-4918-A4DC-48F9E8423C2D}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <RootNamespace>Fleck</RootNamespace>
+    <AssemblyName>Fleck</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
+    <Optimize>false</Optimize>
+    <OutputPath>bin\Debug</OutputPath>
+    <DefineConstants>DEBUG;</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+    <ConsolePause>false</ConsolePause>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <DebugType>full</DebugType>
+    <Optimize>true</Optimize>
+    <OutputPath>bin\Release</OutputPath>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+    <ConsolePause>false</ConsolePause>
+  </PropertyGroup>
+  <ItemGroup>
+    <Reference Include="System" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ConnectionNotAvailableException.cs" />
+    <Compile Include="FleckLog.cs" />
+    <Compile Include="FrameType.cs" />
+    <Compile Include="HandlerFactory.cs" />
+    <Compile Include="HandshakeException.cs" />
+    <Compile Include="IntExtensions.cs" />
+    <Compile Include="MyClass.cs" />
+    <Compile Include="QueuedStream.cs" />
+    <Compile Include="ReadState.cs" />
+    <Compile Include="RequestParser.cs" />
+    <Compile Include="SocketWrapper.cs" />
+    <Compile Include="SubProtocolNegotiationFailureException.cs" />
+    <Compile Include="SubProtocolNegotiator.cs" />
+    <Compile Include="WebSocketConnection.cs" />
+    <Compile Include="WebSocketConnectionInfo.cs" />
+    <Compile Include="WebSocketException.cs" />
+    <Compile Include="WebSocketHttpRequest.cs" />
+    <Compile Include="WebSocketServer.cs" />
+    <Compile Include="WebSocketStatusCodes.cs" />
+    <Compile Include="Handlers\ComposableHandler.cs" />
+    <Compile Include="Handlers\Draft76Handler.cs" />
+    <Compile Include="Handlers\FlashSocketPolicyRequestHandler.cs" />
+    <Compile Include="Handlers\Hybi13Handler.cs" />
+    <Compile Include="Helpers\MonoHelper.cs" />
+    <Compile Include="Interfaces\IHandler.cs" />
+    <Compile Include="Interfaces\ISocket.cs" />
+    <Compile Include="Interfaces\IWebSocketConnection.cs" />
+    <Compile Include="Interfaces\IWebSocketConnectionInfo.cs" />
+    <Compile Include="Interfaces\IWebSocketServer.cs" />
+  </ItemGroup>
+  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
